--- a/web.html
+++ b/web.html
@@ -1,3 +1,4 @@
+<html>
 <form action="action_page.php">
   <div class="container">
     <h1>Register</h1>
@@ -22,3 +23,4 @@
     <p>Already have an account? <a href="#">Sign in</a>.</p>
   </div>
 </form>
+</html>
